# study_cpp

./: CMakeLists.txt  README.md  main.cpp
custom_module/: add.h
lib_opencv/: use.cpp  use.h
variable_init/: use_variable.cpp  use_variable.h
